--- a/src/VideoCardSearch.css
+++ b/src/VideoCardSearch.css
@@ -62,13 +62,13 @@
 }
 
 .videocardsearch__description {
-    max-height: 1.2em;
+    max-height: 1.3em;
     font-size: 12px;
     color: gray;
     font-weight: 400;
     margin-top: 14px;
     overflow: hidden;
-    /* white-space: nowrap; */
+    white-space: nowrap;
     text-overflow: ellipsis;
     max-width: 52vw;
 }
