--- a/src/Header.css
+++ b/src/Header.css
@@ -6,16 +6,12 @@
     position: sticky;
     z-index: 100;
     background-color: white;
-    min-width: 550px;
+    min-width: 625px;
 }
 
 .header__logo {
     height: 20px;
     margin-left: 20px;
-}
-
-.header__logo:hover {
-    cursor: pointer;
 }
 
 .header__left, .header__icons {
@@ -37,6 +33,8 @@
     flex: 1;
     border: none;
     height: 33px;
+    min-width: 100px;
+    z-index: 100;
 }
 
 .header__input input:focus {
@@ -91,20 +89,16 @@
     padding-top: 6px;
 }
 
+.header__onclickgrid:hover .header__menuonclick {
+    fill: lightgray;
+}
+
 .header__onclickgrid:active .header__menuonclick {
     animation-name: menuclick;
-    animation-duration: 4s;
+    animation-duration: 0.15s;
 }
 
 @keyframes menuclick {
-    0% {fill: lightgray;}
-    12% {fill: white; stroke: lightgray;}
-    100% {stroke: white;}
-    
-}
-
-@media screen and (max-width:660px) {
-    .searchbuttonelement > * {
-        display: none;
-    }
+    0% {fill: white; stroke: lightgray;}
+    100% {fill: white; stroke: white;}
 }
