--- a/src/HoverDescription.css
+++ b/src/HoverDescription.css
@@ -5,6 +5,11 @@
 .hoverdescriptionparent {
     display: flex;
     align-items: center;
+    position: relative;
+}
+
+.hoverdescriptionparent.hoverdescriptionparenthomerticon {
+    justify-content: center;
 }
 
 .hoverdescription:hover + .hoverdescriptionhidden {
@@ -16,10 +21,17 @@
     padding: 12px 7px;
     margin-top: 120px;
     font-size: 12px;
-    border-radius: 0.2em;
+    border-radius: 0.3em;
     z-index: 100;
+    animation-name: descriptionface;
+    animation-duration: 0.5s;
+}
+
+@keyframes descriptionface {
+    0% {opacity: 0%;}
+    100% {opacity: 80%;}
 }
 
 .hoverdescription:hover + .hoverdescriptionhidden.hoverdescriptionhiddensearch {
-    margin-left: 160px;
+    left: 15%;
 }
