--- a/src/VideoCardLarge.css
+++ b/src/VideoCardLarge.css
@@ -7,6 +7,7 @@
 
 .videocardlarge__videothumbnail {
     display: flex;
+    position: relative;
 }
 
 .videocardlarge__videothumbnail img {
@@ -24,11 +25,6 @@
     font-weight: bold;
     transform: translate(282px, 155px);
 }
-
-/* .videocard__info {
-    display: flex;
-    margin-top: 10px;
-} */
 
 .videocardlarge__avatar {
     width: 37px !important;
