--- a/src/VideoCardSearch.css
+++ b/src/VideoCardSearch.css
@@ -3,6 +3,11 @@
     display: flex;
 }
 
+.videocardsearch__videothumbnail {
+    position: relative;
+    display: flex;
+}
+
 .videocardsearch__videothumbnail img {
     height: 180px;
     width: 320px;
@@ -16,7 +21,7 @@
     font-size: 13px;
     border-radius: 0.2em;
     font-weight: bold;
-    transform: translate(-37px, 156px);
+    transform: translate(282px, 156px);
 }
 
 .videocardsearch__info {
