--- a/src/VideoCard.css
+++ b/src/VideoCard.css
@@ -6,28 +6,42 @@ a {
     margin-left: 7px;
     margin-right: 7px;
     margin-bottom: 40px;
-    width: 288px;
 }
 
 .videocard__videothumbnail {
-    display: flex;
-    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    max-height: 162px;
+    max-width: 288px;
+    aspect-ratio: 16/9;
 }
 
 .videocard__videothumbnail img {
-    height: 162px;
-    width: 288px;
+    grid-row: 1/span 2;
+    grid-column: 1/span 2;
+    max-height: 100%;
+    width: 100%;
+}
+
+.videocard__videothumbnail div {
+    grid-row-start: 2;
+    grid-column-start: 2;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+
 }
 
 .videocard__videothumbnail span{
-    position: absolute;
     background-color: black;
     color: white;
     padding: 1px 4px;
     font-size: 12px;
     border-radius: 0.2em;
     font-weight: bold;
-    transform: translate(253px, 142px);
+    margin-bottom: 3px;
+    margin-right: 3px;
 }
 
 .videocard__info {
@@ -46,7 +60,7 @@ a {
 
 .videocard__channeltitlestats h4 {
     max-height: 2.8em;
-    width: 247px;
+    max-width: 247px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
