--- a/src/VideoCardLarge.css
+++ b/src/VideoCardLarge.css
@@ -2,28 +2,42 @@
     margin-left: 7px;
     margin-right: 7px;
     margin-bottom: 40px;
-    width: 320px;
 }
 
 .videocardlarge__videothumbnail {
-    display: flex;
-    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    max-height: 180px;
+    max-width: 320px;
+    aspect-ratio: 16/9;
 }
 
 .videocardlarge__videothumbnail img {
-    height: 180px;
-    width: 320px;
+    grid-row: 1/span 2;
+    grid-column: 1/span 2;
+    max-height: 100%;
+    width: 100%;
+}
+
+.videocardlarge__videothumbnail div {
+    grid-row-start: 2;
+    grid-column-start: 2;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+
 }
 
 .videocardlarge__videothumbnail span{
-    position: absolute;
     background-color: black;
     color: white;
     padding: 1px 4px;
     font-size: 13px;
     border-radius: 0.2em;
     font-weight: bold;
-    transform: translate(282px, 155px);
+    margin-bottom: 3px;
+    margin-right: 3px;
 }
 
 .videocardlarge__avatar {
@@ -37,7 +51,7 @@
 
 .videocardlarge__channeltitlestats h4 {
     max-height: 3.10em;
-    width: 279px;
+    max-width: 279px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
