--- a/src/VideoCardSearch.css
+++ b/src/VideoCardSearch.css
@@ -4,28 +4,50 @@
 }
 
 .videocardsearch__videothumbnail {
-    position: relative;
-    display: flex;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    max-height: 162px;
+    max-width: 288px;
+    min-height: 90px;
+    aspect-ratio: 16/9;
 }
+
+@media only screen and (min-width: 1300px) {
+    .videocardsearch__videothumbnail {
+        height: 180px;
+        width: 320px;
+    }
+  }
 
 .videocardsearch__videothumbnail img {
-    height: 180px;
-    width: 320px;
-}
+    grid-row: 1/span 2;
+    grid-column: 1/span 2;
+    max-height: 100%;
+    width: 100%;
 
+}
+.videocardsearch__videothumbnail div {
+    grid-row-start: 2;
+    grid-column-start: 2;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
 .videocardsearch__videothumbnail span{
-    position: absolute;
     background-color: black;
     color: white;
     padding: 1px 4px;
     font-size: 13px;
     border-radius: 0.2em;
     font-weight: bold;
-    transform: translate(282px, 156px);
+    margin-bottom: 3px;
+    margin-right: 3px;
 }
 
 .videocardsearch__info {
     margin-left: 15px;
+    min-width: 100px;
 }
 
 .videocardsearch__channelinfo {
@@ -76,4 +98,34 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     max-width: 52vw;
+}
+
+@media only screen and (max-width: 550px) {
+    .videocardsearch__videothumbnail img {
+        min-height: 100%;
+    }
+
+    .videocardsearch__avatar {
+        width: 19px !important;
+        height: 19px !important; 
+    }
+
+    .videocardsearch__videotitle p {
+        font-size: 16px;
+    }
+
+    .videocardsearch__stats {
+        font-size: 10px;
+        margin-bottom: 8px;
+    }
+
+    .videocardsearch__channeltitle {
+        font-size: 10px;
+        margin-left: 6px;
+    }
+
+    .videocardsearch__description {
+        font-size: 10px;
+        margin-top: 8px;
+    }
 }
