--- a/src/VideoCard.css
+++ b/src/VideoCard.css
@@ -6,6 +6,7 @@ a {
     margin-left: 7px;
     margin-right: 7px;
     margin-bottom: 40px;
+    min-width: 0px;
 }
 
 .videocard__videothumbnail {
@@ -56,11 +57,12 @@ a {
 
 .videocard__channeltitlestats {
     margin-left: 10px;
+    min-width: 0px;
 }
 
 .videocard__channeltitlestats h4 {
     max-height: 2.8em;
-    max-width: 247px;
+    max-width: 240px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -77,4 +79,14 @@ a {
 
 .videocard__channeltitlestats a:hover {
     color: black;
+}
+
+@media only screen and (max-width:550px) {
+    .videocard__videothumbnail {
+        max-height: 120px;
+    }
+
+    .videocard__channeltitlestats h4{
+        max-width: 110px;
+    }
 }
