--- a/src/VideoCardSearch.css
+++ b/src/VideoCardSearch.css
@@ -25,6 +25,7 @@
     grid-column: 1/span 2;
     max-height: 100%;
     width: 100%;
+    object-fit: cover;
 
 }
 .videocardsearch__videothumbnail div {
