--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -6,6 +6,7 @@
     position: sticky;
     z-index: 100;
     background-color: white;
+    top: 0;
 }
 
 .header__logo {
@@ -26,6 +27,7 @@
     align-items: center;
     width: 40%;
     border: 1px solid lightgray;
+    border-radius: 230px;
 }
 
 .header__input input {
@@ -34,6 +36,8 @@
     height: 33px;
     min-width: 30px;
     z-index: 100;
+    border-top-left-radius: 230px;
+    border-bottom-left-radius: 230px;
 }
 
 .header__input input:focus {
@@ -42,6 +46,7 @@
 
 .header__input input[placeholder] {
     font-size: 15px;
+    padding-left: 15px;
 }
 
 .header__inputButton {
@@ -63,6 +68,8 @@
     width: 50px;
     display: flex;
     align-items: center;
+    border-top-right-radius: 230px;
+    border-bottom-right-radius: 230px;
 }
 
 .header__onclickgrid {
