--- a/src/components/sidemenu/SidebarRowMini.css
+++ b/src/components/sidemenu/SidebarRowMini.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     padding: 10px;
     align-items: center;
+    border-radius: 10px;
 }
 
 .sidebarrowmini__icon {
@@ -14,7 +15,6 @@
     font-weight: 500;
     margin-top: 5px;
     color: black;
-
 }
 
 @media (hover:hover) {
