--- a/src/pages/homepage/components/VideoCard.css
+++ b/src/pages/homepage/components/VideoCard.css
@@ -24,6 +24,7 @@ a {
     max-height: 100%;
     width: 100%;
     object-fit: cover;
+    border-radius: 10px;
 }
 
 .videocard__videothumbnail div {
