--- a/src/pages/homepage/components/VideoCardLarge.css
+++ b/src/pages/homepage/components/VideoCardLarge.css
@@ -20,6 +20,7 @@
     max-height: 100%;
     width: 100%;
     object-fit: cover;
+    border-radius: 10px;
 }
 
 .videocardlarge__videothumbnail div {
