--- a/src/pages/searchpage/components/VideoCardSearch.css
+++ b/src/pages/searchpage/components/VideoCardSearch.css
@@ -26,6 +26,7 @@
     max-height: 100%;
     width: 100%;
     object-fit: cover;
+    border-radius: 10px;
 
 }
 .videocardsearch__videothumbnail div {
