--- a/src/components/hoverdescription/HoverDescription.css
+++ b/src/components/hoverdescription/HoverDescription.css
@@ -12,7 +12,7 @@
     justify-content: center;
 }
 
-@media (hover:hover) {
+@media (hover:hover) and (pointer:fine) {
     .hoverdescription:hover + .hoverdescriptionhidden {
         display: inline-block;
         background-color: rgb(60, 55, 55);
