--- a/src/components/sidemenu/SidebarRowMini.css
+++ b/src/components/sidemenu/SidebarRowMini.css
@@ -17,7 +17,7 @@
     color: black;
 }
 
-@media (hover:hover) {
+@media (hover:hover) and (pointer:fine) {
     .sidebarrowmini:hover {
         background-color: rgb(232, 229, 229);
         cursor: pointer;
