--- a/src/pages/searchpage/SearchResultVideos.css
+++ b/src/pages/searchpage/SearchResultVideos.css
@@ -5,6 +5,7 @@
     padding-left: 40px;
     padding-right: 4vw;
     padding-top: 5px;
+    padding-bottom: 40px;
     min-width: 100px;
     overflow-x: hidden;
 }
