--- a/src/components/sidemenu/Sidebar.css
+++ b/src/components/sidemenu/Sidebar.css
@@ -1,3 +1,8 @@
+.sidebar__sticky {
+    position: sticky;
+    top: 80px;
+}
+
 .sidebar {
     min-width: 200px;
 }
@@ -16,6 +21,10 @@
 }
 
 @media only screen and (max-width: 550px) {
+    .sidebar__sticky {
+        top: 50px;
+    }
+
     .sidebar {
         min-width: 150px;
     }
