--- a/src/pages/homepage/RecommendedVideos.css
+++ b/src/pages/homepage/RecommendedVideos.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(1,1fr);
     padding: 20px 20px;
-    background-color: #f9f9f9;
+    background-color: white;
     overflow: hidden;
     width: 100%;
 }
@@ -25,7 +25,7 @@
     }
 }
 
-@media only screen and (min-width:1504px) {
+@media only screen and (min-width:1540px) {
     .recommendedVideos {
         grid-template-columns: repeat(5,1fr);
     }
